--- a/index/INDEX.html
+++ b/index/INDEX.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style> </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -8,8 +9,8 @@
 <body>
     <h1> Angel </h1> 
     <h1> Murillo </h1>
-    <h1> murilloangel35@gmail.com </h1>
-    <h1> 43.414.375 </h1>
+    <h2> murilloangel35@gmail.com </h2>
+    <h2> 43.414.375 </h2>
     <h3>Sedes</h3>
     
 </body>
