--- a/nuevo/hoja.html
+++ b/nuevo/hoja.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <h1> Angel </h1> 
+    <h1> Murillo </h1>
+    <h2> murilloangel35@gmail.com </h2>
+    <h2> 43.414.375 </h2>
+    <h3>Sedes</h3>
     
 </body>
 </html>
