Agregue una alerta

--- a/nuevo/hoja.html
+++ b/nuevo/hoja.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <link href="estilos\styles.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -12,6 +12,6 @@
     <h2> murilloangel35@gmail.com </h2>
     <h2> 43.414.375 </h2>
     <h3>Sedes</h3>
-    
+    <script src= "funciones.js"></script>
 </body>
 </html>
