--- a/index/INDEX.html
+++ b/index/INDEX.html
@@ -11,7 +11,7 @@
     <h1> Murillo </h1>
     <h2> murilloangel35@gmail.com </h2>
     <h2> 43.414.375 </h2>
-    <h3>Sedes</h3>
+    <h3>Sedes Sapientae</h3>
     
 </body>
 </html>
