Agregue una tabla con mis datos

--- a/nuevo/hoja.html
+++ b/nuevo/hoja.html
@@ -7,11 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Angel </h1> 
-    <h1> Murillo </h1>
-    <h2> murilloangel35@gmail.com </h2>
-    <h2> 43.414.375 </h2>
-    <h3>Sedes</h3>
-    <script src= "funciones.js"></script>
+    <table style="width:25%;" style="border: 0cqmax;" >
+     <tr>   
+          <td>Alumno</td>
+          <td> Curso </td> 
+          <td> DNI </td>
+     </tr>
+     <br>
+    <td> Angel Murillo</td>
+    <td> 2º año</td>
+    <td> 43.414.375</td>
+    </tr>
+    </table>
+    <///<script src= "funciones.js"></script>
 </body>
 </html>
