Agregue un boton que llama a una funcion con una alerta

--- a/nuevo/hoja.html
+++ b/nuevo/hoja.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table style="width:25%;" style="border: 0cqmax;" >
+    <table style="width:25%;">
      <tr>   
           <td>Alumno</td>
           <td> Curso </td> 
@@ -19,6 +19,8 @@
     <td> 43.414.375</td>
     </tr>
     </table>
-    <///<script src= "funciones.js"></script>
+
+    <button onclick="Saludar()" >Click</button>
+    <script src= "funciones.js"></script>
 </body>
 </html>
