Agregue funciones con alertas

--- a/nuevo/hoja.html
+++ b/nuevo/hoja.html
@@ -20,7 +20,10 @@
     </tr>
     </table>
 
-    <button onclick="Saludar()" >Click</button>
+    <br>
+
+    <button onclick="Saludar('Angel')" >Click me</button>
+    <button onclick="comparacion(150)"> Comparacion</button>    
     <script src= "funciones.js"></script>
 </body>
 </html>
