--- a/TP1/index.html
+++ b/TP1/index.html
@@ -8,8 +8,8 @@
 <body>
 
    <div id="result"></div> 
-   <input type="text" name="codigo">
-   <button> buscar </button> 
+   <input type="text" id="codigo">
+   <button onclick="buscarPersonaje()"> Buscar </button> 
     
    
   <script src="fn.js"></script>  
