--- a/TP1/index.html
+++ b/TP1/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="style.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
 
-   <div id="result"></div> 
+   <div id="result" class="resultado"></div> 
    <input type="text" id="codigo">
    <button onclick="buscarPersonaje()"> Buscar </button> 
     
