Agregue una funcion para buscar la foto del personaje en base al genero

--- a/TP1/index.html
+++ b/TP1/index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
 
-   <div id="result" class="resultado"></div> 
+   <!--<div id="result" class="resultado"></div> 
    <input type="text" id="codigo">
-   <button onclick="buscarPersonaje()"> Buscar </button> 
+   <button onclick="buscarPersonaje()"> Buscar </button>-->
     
+   <div id="result"></div>
+   <input type="text" id="codigo">
+   <button onclick="buscarImagen()"> Buscar </button>
+   <img id="imagen">
    
   <script src="fn.js"></script>  
   <script src="json.js"></script>
+
 </body>
 </html>
