--- a/TP1/index.html
+++ b/TP1/index.html
@@ -8,10 +8,24 @@
 </head>
 <body>
 
-   <div id="result" class="resultado"></div> 
+   <!-- Buscar personaje por id
+    <div id="result" class="resultado"></div> 
    <input type="text" id="codigo">
-   <button onclick="buscarPersonaje()"> Buscar </button> 
-    
+   <button onclick="buscarPersonaje()"> Buscar </button>--> 
+
+   
+   <!-- Buscar personaje por id y saber su genero con su foto 
+    <input type="text" id="code">
+   <button onclick="buscarImagen()"> Buscar </button>
+   <img id="imagen">
+   <div id="results"></div>-->
+
+   <input type="text" id="codigo">
+   <input type="text" id="code">
+   <button onclick="comparar()"> Buscar </button> <br>
+   <img id="img2"> 
+   <img id="img"><br>
+   <div id="resultado"></div>
    
   <script src="fn.js"></script>  
   <script src="json.js"></script>
