--- a/TP1/index.html
+++ b/TP1/index.html
@@ -21,11 +21,18 @@
    <img id="imagen">
    <div id="results"></div>-->
 
-   <input type="text" id="codigo">
-   <input type="text" id="code">
-   <button onclick="comparar()"> Buscar </button> <br>
-   <img id="img2"> 
-   <img id="img"><br>
+   <input type="number" id="codigo">
+   <input type="number" id="code">
+
+   <button onclick="comparar()"> Buscar </button>
+
+   <br>
+
+   <img id="img"> 
+   <img id="img2">
+
+   <br>
+   
    <div id="resultado"></div>
 
     
