--- a/Parcialito/index.html
+++ b/Parcialito/index.html
@@ -9,10 +9,13 @@
 <body>
 
 <form action="#">
+    <h3>Grupo A</h3>
     <input type="number" id="codigo1">
     <button type="reset" id="enviar1" onclick="search()" > Enviar </button>
     <div id="imagenes1"></div>
-   
+
+
+   <h3>Grupo B</h3>
     <input type="number" id="codigo2">
     <button type="reset" id="enviar2" onclick="search2()"> Enviar </button>
     <div id="imagenes2" class="resultado"></div>
