--- a/clases/Ejercicio API/index.html
+++ b/clases/Ejercicio API/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="sylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-
       <button class="result" onclick="Usuario()"> Buscar </button>
-      
       <script src="fn.js"></script>
 </body>
 </html>
