--- a/clases/Ejercicio PreParcial2/index.html
+++ b/clases/Ejercicio PreParcial2/index.html
@@ -26,7 +26,11 @@
     <button onclick="rickMorty()"> Buscar personajes del Rick and Morty</button>
     <br>
     <div id="ordenar"></div>
-
+    <br>
+    <br>
+    <br>
+    <button onclick="crearObjeto()">Mostrar objeto combinado de las dos APIs</button>
+    <div id="mostrar"></div>
 
     
     <script src="funciones.js"></script>
